# routers/api/item.go
@@ -1,7 +1,9 @@
 package api
 
 import (
+	"log"
 	"net/http"
+	"runtime"
 
 	"github.com/gin-gonic/gin"
 	"github.com/mikezzb/steam-trading-server/app"
@@ -13,32 +15,56 @@ import (
 
 // @Summary Get items
 // @Produce json
-// @Param page query int false "Page"
+// @Param page query int true "Page"
 // @Router /items [get]
 func GetItems(c *gin.Context) {
 	appG := app.Gin{C: c}
 
 	itemService := services.Item{
-		PageNum: util.GetPage(c, setting.App.ItemPageSize),
+		PageNum: util.GetPage(c),
 	}
 
-	items, err := itemService.GetItems()
+	log.Printf("GetItems: %d", itemService.PageNum)
+
+	items, err := itemService.GetItems(setting.App.ItemPageSize)
+
+	runtime.Gosched()
 
 	if err != nil {
-		appG.Response(http.StatusInternalServerError, e.SERVER_ERROR, nil)
+		appG.Error(http.StatusInternalServerError, e.SERVER_ERROR, err)
 		return
 	}
 
 	// add total count
 	total, err := itemService.Count()
 	if err != nil {
-		appG.Response(http.StatusInternalServerError, e.SERVER_ERROR, nil)
+		appG.Error(http.StatusInternalServerError, e.SERVER_ERROR, err)
+		return
+	}
+
+	data := util.MakePagingData(itemService.PageNum, setting.App.ItemPageSize, total)
+	data["items"] = items
+
+	appG.Response(http.StatusOK, e.SUCCESS, data)
+}
+
+// @Summary Get item by id
+// @Produce json
+// @Param id path string true "Item ID"
+// @Router /items/{id} [get]
+func GetItem(c *gin.Context) {
+	appG := app.Gin{C: c}
+	id := c.Param("id")
+
+	itemService := services.Item{}
+	item, err := itemService.GetItem(id)
+
+	if err != nil {
+		appG.Error(http.StatusInternalServerError, e.SERVER_ERROR, nil)
 		return
 	}
 
 	data := make(map[string]interface{})
-	data["items"] = items
-	data["total"] = total
-
+	data["item"] = item
 	appG.Response(http.StatusOK, e.SUCCESS, data)
 }
